k8s/spring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 1
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: otel-spring
          ports:
            - name: web
              protocol: TCP
              containerPort: 8080
