k8s/spring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring
spec:
  selector:
    app: spring
  ports:
    - name: http
      port: 8080
      targetPort: 8080
